# Argos

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: main.yml
cmake/: CodeCoverage.cmake  FindSphinx.cmake
docs/doxygen/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
docs/tutorial/: CMakeLists.txt  Tutorial.cpp
examples/: CMakeLists.txt  README.md
examples/ArgosTestApp/: ArgosTestAppMain.cpp  CMakeLists.txt
examples/append_clear_option/: CMakeLists.txt  README.md  append_clear_option.cpp
examples/area/: CMakeLists.txt  README.md  area.cpp
examples/commands/: CMakeLists.txt  README.md  commands.cpp
examples/hello/: CMakeLists.txt  hello.cpp
examples/list_options/: CMakeLists.txt  README.md  list_options.cpp
examples/rot13/: CMakeLists.txt  README.md  rot13.cpp
examples/table/: CMakeLists.txt  README.md  table.cpp
examples/whereis/: CMakeLists.txt  README.md  whereis.cpp
include/Argos/: Argos.hpp  ArgosEnums.hpp  ArgosException.hpp  ArgosVersion.hpp.in  Argument.hpp  ArgumentIterator.hpp  ArgumentOperation.hpp  ArgumentParser.hpp  ArgumentValue.hpp  ArgumentValueIterator.hpp  ArgumentValueRef.hpp  ArgumentValues.hpp  ArgumentView.hpp  Callbacks.hpp  Command.hpp  CommandView.hpp  Enums.hpp  IArgument.hpp  IArgumentView.hpp  Option.hpp  OptionView.hpp  ParseFloatingPoint.hpp  ParseInteger.hpp  ParseValue.hpp  ParsedArguments.hpp  ParsedArgumentsBuilder.hpp  RawArgumentValue.hpp
obsolete/examples/ArgosTestApp/: CMakeLists.txt
single_src/: Argos.cpp  Argos.hpp
single_src/Argos/: Argos.cpp  Argos.hpp
src/Argos/: Argos.cpp  Argos.hpp  ArgosException.hpp  ArgosThrow.hpp  ArgosVersion.hpp.in  Argument.cpp  Argument.hpp  ArgumentBuilder.cpp  ArgumentBuilder.hpp  ArgumentCounter.cpp  ArgumentCounter.hpp  ArgumentData.hpp  ArgumentIterator.cpp  ArgumentIterator.hpp  ArgumentIteratorImpl.cpp  ArgumentIteratorImpl.hpp  ArgumentOperation.hpp  ArgumentParser.cpp  ArgumentParser.hpp  ArgumentParserImpl.cpp  ArgumentParserImpl.hpp  ArgumentValue.cpp  ArgumentValueIterator.cpp  ArgumentValueRef.cpp  ArgumentValues.cpp  ArgumentView.cpp  Command.cpp  CommandData.cpp  CommandData.hpp  CommandView.cpp  ConsoleWidth.cpp  ConsoleWidth.hpp  Enums.cpp  HelpText.cpp  HelpText.hpp  HelpTextWriter.cpp  HelpTextWriter.hpp  HelpWriter.cpp  HelpWriter.hpp  IOptionIterator.hpp  (+52 more)
tests/ArgosTest/: ArgosTestMain.cpp  Argv.hpp  CMakeLists.txt  U8Adapter.hpp  test_ArgumentCounter.cpp  test_ArgumentIterator.cpp  test_ArgumentParser.cpp  test_ArgumentValue.cpp  test_Callbacks.cpp  test_HelpWriter.cpp  test_ParseFloatingPoint.cpp  test_ParseInteger.cpp  test_ParseValue.cpp  test_ParsedArguments.cpp  test_Something.cpp  test_StandardOptionIterator.cpp  test_StringUtilities.cpp  test_Subcommands.cpp  test_TextFormatter.cpp  test_TextWriter.cpp  test_Utilities.cpp  test_WordSplitter.cpp
tests/ArgosTestApp/: ArgosTestAppMain.cpp  CMakeLists.txt
tools/: codesize.py  make_argos_cpp.cmd.in  make_argos_cpp.sh  make_argos_cpp.sh.in  mergecpp.py
tools/compiled_code_size/: codesize.py
tools/make_single_src/: make_argos_cpp.cmd.in  make_argos_cpp.sh.in
