# ===========================================================================
# Copyright © 2021 Jan Erik Breimo. All rights reserved.
# Created by Jan Erik Breimo on 2021-09-18.
#
# This file is distributed under the BSD License.
# License text is included with the source distribution.
# ===========================================================================
cmake_minimum_required(VERSION 3.14)
project(examples)

add_subdirectory(append_clear_option)
add_subdirectory(area)
add_subdirectory(hello)
add_subdirectory(list_options)
add_subdirectory(rot13)
add_subdirectory(table)
add_subdirectory(whereis)
